--- a/holoquiz.html
+++ b/holoquiz.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hololive EN Quiz</title>
-    <link rel="stylesheet" href="character.css">
+    <link rel="stylesheet" href="holoquiz.css">
 </head>
 <body>
     <div class="container">
@@ -371,7 +371,7 @@
     <audio id="music" src="https://dl.dropbox.com/scl/fi/1u7w9gae3hoay789hnf77/Breaking-Dimensions-Instrumental.mp3?rlkey=wwubm3wu8ieud2m55262wcp6p&st=titouufh&dl=0" autoplay loop>
         Your browser does not support the audio element.
     </audio>
-    <script src="character.js"></script>
+    <script src="holoquiz.js"></script>
 </body>
 </html>
 
